--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 body{
-  background-color: #fd2c2a;
+  background-color: black;
+}
+
+canvas{
+  pointer-events: none;
+}
+
+span.growing{
+  background-color: red;
 }
